added sections, need to add more information in onto subpages and photos

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 
 * {
   font-family: 'Montserrat', sans-serif;
@@ -35,5 +35,151 @@
       color: rgb(16, 77, 152)!important;
       text-decoration: none;
     }
+  }
+}
+
+.Section1 {
+  
+  h2 {
+    font-size: 42px;
+    line-height: 36px;
+    letter-spacing: 0px;
+    color: rgb(0, 156, 222);
+    margin: 0px;
+  }
+
+  p {
+    font-size: 28px;
+    line-height: 32px;
+    color: black;
+    margin-bottom: 0px;
+    white-space: initial;
+    text-align: center;
+    margin-top: 0px!important;
+    font-weight: 700;
+  }
+}
+
+.Section2 {
+
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  background-color: rgb(218, 242, 252);
+  margin: 0px;
+  box-sizing: border-box;
+
+  .Inner {
+    flex: 1 1 0%;
+    padding: 0px 28px;
+    max-width: 1920px;
+    transform: translateY(0px);
+    opacity: 1;
+    transition: 
+      opacity 100ms cubic-bezier(0.64, 0.04, 0.35, 1) 150ms, 
+      transform 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 150ms;
+
+    h2 {
+      margin-top: 0px;
+      margin-bottom: 17px;
+      color: rgb(16, 76, 151);
+      font-size: 28px;
+      letter-spacing: normal;
+      line-height: 36px;
+      text-align: left;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5556;
+      margin-bottom: 37px;
+      color: black;
+      font-weight: 300;
+    }
+  }
+}
+
+.Section3 {
+  padding: 35px 0px 70px;
+
+  .Inner {
+    margin: 0px;
+    padding: 0px 28px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    h2 {
+      font-size: 28px;
+      letter-spacing: normal;
+      line-height: 36px;
+      text-align: left;
+      margin-top: 0px;
+      margin-bottom: 17px;
+      color: rgb(16,76,151);
+      font-weight: 700;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5556;
+      margin-bottom: 37px;
+      color: black;
+      font-weight: 300;
+    }
+  }
+}
+
+.Section4 {
+  padding-top: 35px;
+  padding-bottom: 35px;
+  background-color: rgb(218, 242, 252);
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+
+  .Inner {
+    flex: 1 1 0%;
+    padding: 0px 28px;
+    max-width: 1920px;
+    transform: translateY(0px);
+    opacity: 1;
+    transition: 
+      opacity 100ms cubic-bezier(0.64, 0.04, 0.35, 1) 150ms, 
+      transform 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 150ms;
+
+    h2 {
+      margin-top: 0px;
+      margin-bottom: 17px;
+      color: rgb(16, 76, 151);
+      font-size: 28px;
+      letter-spacing: normal;
+      line-height: 36px;
+      text-align: left;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5556;
+      margin-bottom: 37px;
+      color: black;
+      font-weight: 300;
+    }
+  }
+}
+
+.AvailabilityChecker {
+  padding: 35px 28px;
+  
+  h2 {
+    margin-top: 0px;
+    margin-bottom: 17px;
+    color: rgb(16, 76, 151);
+    font-size: 28px;
+    letter-spacing: normal;
+    line-height: 36px;
+    text-align: left;
   }
 }
