--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 
+$header-height: 64px;
+$header-padding: 16px;
+$anim-duration: 125ms;
+$hover-opacity: .85;
+$primary-background-color: rgb(16,76,151);
+$background-color-light: rgb(218, 242, 252);
+
 * {
   font-family: 'Montserrat', sans-serif;
 }
@@ -8,12 +15,16 @@
 .Header {
   display: flex;
   justify-content: space-between;
-  padding: 0px 16px;
+  padding: 0px $header-padding;
   height: 64px;
   -webkit-box-pack: justify;
   -webkit-box-align: center;
   flex: 0 0 auto;
   border-bottom: 1px solid rgb(208, 208, 208);
+  position: fixed;
+  background-color: white;
+  width: calc(100vw - 16px - 16px);
+  z-index: 999;
 
   .logo-wrapper {
     margin: auto 0px;
@@ -38,25 +49,77 @@
   }
 }
 
+.Notification {
+  position: absolute;
+  top: $header-height;
+  left: 0px;
+  z-index: 998;
+  width: 100vw;
+  text-align: center;
+  background-color: #e66c03;
+  display: flex;
+  box-shadow: 1px solid #c25b02;
+
+  p{
+    color: white;
+    font-weight: 500;
+    font-size: .85rem;
+    margin: .75rem;
+  }
+
+  a {
+    text-decoration: none;
+    color: white;
+    transition: opacity $anim-duration linear;
+  }
+
+  a:hover {
+    opacity: .85;
+  }
+
+  img {
+    margin-right: 16px;
+    cursor: pointer;
+    transition: all $anim-duration linear;
+    width: 18px;
+
+    &:hover {
+      opacity: $hover-opacity;
+    }
+  }
+}
+
 .Section1 {
-  
+  padding-top: $header-height;
+  padding-bottom: 35px;
+
+  img {
+    width: 100%;
+    min-width: 100%;
+  }
+
   h2 {
+    padding-top: 35px;
     font-size: 42px;
     line-height: 36px;
     letter-spacing: 0px;
     color: rgb(0, 156, 222);
     margin: 0px;
+    text-align: center;
   }
 
   p {
     font-size: 28px;
     line-height: 32px;
     color: black;
+    margin: auto;
     margin-bottom: 0px;
+    margin-top: 4px;
     white-space: initial;
     text-align: center;
-    margin-top: 0px!important;
+    // margin-top: 0px!important;
     font-weight: 700;
+    max-width: 80%;
   }
 }
 
@@ -67,7 +130,7 @@
   justify-content: center;
   padding-top: 35px;
   padding-bottom: 35px;
-  background-color: rgb(218, 242, 252);
+  background-color: $background-color-light;
   margin: 0px;
   box-sizing: border-box;
 
@@ -181,5 +244,149 @@
     letter-spacing: normal;
     line-height: 36px;
     text-align: left;
+  }
+}
+
+.ContactUs {
+  text-align: center;
+
+  .Inner {
+    
+
+  }
+}
+
+.GettingHere {
+  padding: 35px 28px;
+  
+  .Inner {
+    h2 {
+      color: $primary-background-color;
+      margin-top: 0px;
+      margin-bottom: 17px;
+      font-size: 28px;
+      letter-spacing: normal;
+      line-height: 36px;
+      text-align: left;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5556;
+      margin-bottom: 37px;
+      color: black;
+      font-weight: 300;
+
+      a {
+        text-decoration: none;
+        color: black;
+        font-weight: 800;
+        transition: all $anim-duration linear;
+
+        &:hover {
+          opacity: $hover-opacity;
+        }
+      }
+    }
+  }
+}
+
+.Footer {
+  background-color: $primary-background-color;
+  padding: 35px 28px;
+  color: white;
+
+  a {
+    color: white;
+    font-size: 16px;
+  }
+}
+
+
+////////////////////////////////////////////////////////////////
+
+.DisplayImageContainer-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.DisplayImageContainer {
+  margin-right: 6px;
+  overflow: hidden;
+
+  button {
+    position: relative;
+    background: none 50% 50% / cover no-repeat rgb(218, 218, 218);
+    background-position: 50% 50%;
+    transition: transform 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 0s;
+    background-repeat: no-repeat;
+    width: 100%;
+    // height: 250px;
+    border: none;
+    height: 100px;
+    margin: 0px 9px 21px;
+  }
+}
+
+.ImageContainer-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 6px;
+}
+
+.ImageContainer {
+  padding-right: 24px;
+
+  button {
+    position: relative;
+    background: none 50% 50% / cover no-repeat rgb(218, 218, 218);
+    background-position: 50% 50%;
+    transition: transform 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 0s;
+    background-repeat: no-repeat;
+    width: 100%;
+    // height: 250px;
+    border: none;
+    height: 175px;
+    margin: 0px 9px 21px;
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      right: 0px;
+      bottom: 0px;
+      background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+      cursor: pointer;
+    }
+
+    &:hover {
+      transform: scale(1.08);
+    }
+
+    &:hover span {
+      height: calc(100% - 38px);
+    }
+    
+  }
+  span {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
+    justify-content: center;
+    bottom: 19px;
+    left: 0px;
+    height: 27px;
+    width: 100%;
+    color: white;
+    // padding: 0 20px;
+    z-index: 1;
+    font-weight: 800;
+    text-align: center;
+    font-size: 20px;
+    transition: all 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 0s;
+    text-transform: none;
   }
 }
