--- a/src/App.scss
+++ b/src/App.scss
@@ -59,6 +59,7 @@ $background-color-light: rgb(218, 242, 252);
   background-color: #e66c03;
   display: flex;
   box-shadow: 1px solid #c25b02;
+  transition: opacity $anim-duration * 2 linear;
 
   p{
     color: white;
@@ -154,7 +155,7 @@ $background-color-light: rgb(218, 242, 252);
       text-align: left;
     }
 
-    p {
+    p:not(.description) & p:not(.price) {
       font-size: 18px;
       line-height: 1.5556;
       margin-bottom: 37px;
@@ -233,8 +234,45 @@ $background-color-light: rgb(218, 242, 252);
   }
 }
 
+.Section5 {
+  display: flex;
+  flex-direction: column;
+  padding-top: 35px;
+  padding-bottom: 35px;
+
+  .Inner {
+    flex: 1 1 0%;
+    padding: 0px 28px;
+    max-width: 1920px;
+    transform: translateY(0px);
+    opacity: 1;
+    transition: 
+      opacity 100ms cubic-bezier(0.64, 0.04, 0.35, 1) 150ms, 
+      transform 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 150ms;
+
+    h2 {
+      margin-top: 0px;
+      margin-bottom: 17px;
+      color: rgb(16, 76, 151);
+      font-size: 28px;
+      letter-spacing: normal;
+      line-height: 36px;
+      text-align: left;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5556;
+      margin-bottom: 37px;
+      color: black;
+      font-weight: 300;
+    }
+  }
+}
+
 .AvailabilityChecker {
   padding: 35px 28px;
+  padding-top: 64px;
   
   h2 {
     margin-top: 0px;
@@ -245,14 +283,168 @@ $background-color-light: rgb(218, 242, 252);
     line-height: 36px;
     text-align: left;
   }
+
+
+  .PaxNumber {
+    border-radius: 4px;
+    border: 1px solid black;
+    background-color: white;
+    font-weight: 600;
+    padding-left: 32px;
+    padding-right: 32px;
+    margin-left: 12px;
+    outline: none;
+    font-size: 14px;
+  }
+
+  .CheckAvailability {
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    margin-left: 12px;
+    padding-left: 32px;
+    padding-right: 32px;
+    font-weight: 600;
+    background-color: $primary-background-color;
+    color: white;
+    font-size: 18px;
+  }
+}
+
+.DateInput-wrapper {
+  display: flex;
+  position: relative;
+  height: 46px;
+}
+
+.DateInput {
+  display: flex;
+  padding: 0px 24px;
+  cursor: pointer;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(0,0,0,0);
+  border-radius: 4px;
+  transition: border-color $anim-duration linear;
+
+  &:hover {
+    border-color: rgba(0,0,0,1);
+  }
+
+  .dayOfMonth {
+    color: $primary-background-color;
+    font-size: 36px;
+    font-weight: 900;
+    margin-right: 8px;
+  }
+
+  .details-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .monthName {
+      font-weight: 600;
+      font-size: 16px;
+      margin-bottom: -2px;
+    }
+  
+    .dayOfWeek {
+      font-size: 16px;
+      margin-top: -2px;
+    }
+  }
+}
+
+.DatePicker {
+  position: fixed;
+  z-index: 9999;
+  top: 64px;
+  left: 0px;
+  right: 0px;
+  // width: fit-content;
+  margin: auto;
+  background-color: $primary-background-color;
+  border-radius: 4px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  padding: 24px;
+  text-align: center;
+
 }
 
 .ContactUs {
+  padding: 64px 28px;
   text-align: center;
 
   .Inner {
-    
+      margin: auto;
 
+      h2 {
+        color: $primary-background-color;
+        font-size: 28px;
+      }
+
+      .contact-wrapper {
+        text-align: left;
+        font-weight: 500;
+        white-space: nowrap;
+        width: 45%;
+        margin: auto;
+
+        div {
+          display: flex;
+          line-height: 36px;
+
+          span, a {
+            margin-left: 12px;
+          }
+        }
+      }
+
+      a {
+        text-decoration: none;
+        color: black;
+        opacity: 1;
+        transition: all $anim-duration linear;
+        // color: white;
+        // font-weight: 600;
+        // padding: 2px 6px;
+        // background-color: $primary-background-color;
+
+        &:hover {
+          opacity: $hover-opacity;
+        }
+      }
+  }
+}
+
+.About {
+  padding: 35px 28px;
+  padding-top: 64px;
+  background-color: rgb(218, 242, 252);
+
+  .Inner {
+    max-width: 1920px;
+
+    h2 {
+      color: $primary-background-color;
+      margin-top: 0px;
+      margin-bottom: 17px;
+      font-size: 28px;
+      letter-spacing: normal;
+      line-height: 36px;
+      text-align: left;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.5556;
+      margin-bottom: 37px;
+      color: black;
+      font-weight: 300;
+
+    }
   }
 }
 
@@ -367,6 +559,40 @@ $background-color-light: rgb(218, 242, 252);
     &:hover span {
       height: calc(100% - 38px);
     }
+
+    &:hover .price {
+      height: calc(100% - 72px);
+    }
+
+    p {
+      opacity: 0;
+      position: absolute;
+      color: white!important;
+      z-index: 996!important;
+      transition: all $anim-duration linear;
+      // text-align: center;
+
+      &.description {
+        bottom: 12px;
+        left: 0;
+        right: 0;
+      }
+
+      &.price {
+        // top: 15px;
+        // bottom: 0px;
+        font-weight: 400;
+        font-size: 13px;
+        pointer-events: none;
+        height: 24px;
+        left: 0;
+        right: 0;
+      }
+    }
+
+    &:hover p {
+      opacity: 1;
+    }
     
   }
   span {
@@ -389,4 +615,11 @@ $background-color-light: rgb(218, 242, 252);
     transition: all 250ms cubic-bezier(0.64, 0.04, 0.35, 1) 0s;
     text-transform: none;
   }
+}
+
+.vertical-border {
+  background-color: rgba(0,0,0,.075);
+  width: 2.5px;
+  height: 100%;
+  border-radius: 24px;
 }
