adding date picker

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ $background-color-light: rgb(218, 242, 252);
 
 * {
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 
 .Header {
