--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,8 @@ $background-color-light: rgb(218, 242, 252);
   border-bottom: 1px solid rgb(208, 208, 208);
   position: fixed;
   background-color: white;
-  width: calc(100vw - 16px - 16px);
+  // width: calc(100vw - 16px - 16px);
+  width: 100vw;
   z-index: 999;
 
   .logo-wrapper {
@@ -59,6 +60,7 @@ $background-color-light: rgb(218, 242, 252);
   text-align: center;
   background-color: #e66c03;
   display: flex;
+  justify-content: space-between;
   box-shadow: 1px solid #c25b02;
   transition: opacity $anim-duration * 2 linear;
 
@@ -272,8 +274,12 @@ $background-color-light: rgb(218, 242, 252);
 }
 
 .AvailabilityChecker {
+  border: 1px solid black;
+  // background-color: $background-color-light;
+  // border-radius: 16px;
   padding: 35px 28px;
-  padding-top: 64px;
+  width: fit-content;
+  margin: 64px auto;
   
   h2 {
     margin-top: 0px;
@@ -291,36 +297,126 @@ $background-color-light: rgb(218, 242, 252);
     border: 1px solid black;
     background-color: white;
     font-weight: 600;
-    padding-left: 32px;
-    padding-right: 32px;
+    padding-left: 22px;
+    padding-right: 22px;
     margin-left: 12px;
     outline: none;
     font-size: 14px;
+    transition: all $anim-duration linear;
+    display: flex;
+    line-height: 60px;
+
+    &:hover {
+      // background-color: black;
+      // color: white;
+    }
+
+    // &:after {
+    //   content: " Guests";
+    // }
+  }
+
+  .RoomNumber {
+    border-radius: 4px;
+    border: 1px solid black;
+    background-color: white;
+    font-weight: 600;
+    padding-left: 22px;
+    padding-right: 22px;
+    margin-left: 12px;
+    outline: none;
+    font-size: 14px;
+    transition: all $anim-duration linear;
+    
+    display: flex;
+    line-height: 60px;
+
+    &:hover {
+      // background-color: black;
+      // color: white;
+    }
+    
+    // &:after {
+    //   content: " Rooms";
+    // }
+  }
+
+  .Minus {
+    margin-top: 6px;
+    margin-right: 8px;
+    
+    img {
+      width: 22px;
+      cursor: pointer;
+    }
+  }
+
+  .Plus {
+    margin-top: 6px;
+    margin-left: 8px;
+
+    img {
+      width: 22px;
+      cursor: pointer;
+    }
   }
 
   .CheckAvailability {
     border-radius: 4px;
     border: none;
     outline: none;
-    margin-left: 12px;
+    margin-top: 24px;
     padding-left: 32px;
     padding-right: 32px;
     font-weight: 600;
     background-color: $primary-background-color;
     color: white;
     font-size: 18px;
+    height: 46px;
+  }
+
+  .contact-details {
+    margin-top: 32px;
+    display: block;
+
+    input {
+      width: 250px;
+      display: block;
+      // flex-grow: 1;
+      margin-right: 6px;
+      margin-top: 16px;
+      padding: 6px 8px;
+      border-radius: 4px;
+      border: 1px solid black;
+      outline: none;
+      color: $primary-background-color;
+      font-weight: 600;
+
+      &::placeholder {
+        color: $primary-background-color;
+      }
+    }
   }
 }
 
 .DateInput-wrapper {
   display: flex;
   position: relative;
-  height: 46px;
+  height: calc(46px + 15px);
+
+  div {
+    text-align: center;
+    font-size: 12px;
+    
+    .DateInput-title {
+      opacity: .75;
+    }
+  }
 }
 
 .DateInput {
-  display: flex;
-  padding: 0px 24px;
+  display: flex!important;
+  padding: 0px 24px!important;
   cursor: pointer;
   border-width: 1px;
   border-style: solid;
@@ -343,6 +439,7 @@ $background-color-light: rgb(218, 242, 252);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: left;
 
     .monthName {
       font-weight: 600;
@@ -390,7 +487,7 @@ $background-color-light: rgb(218, 242, 252);
         text-align: left;
         font-weight: 500;
         white-space: nowrap;
-        width: 45%;
+        width: 20%;
         margin: auto;
 
         div {
