--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ $background-color-light: rgb(218, 242, 252);
   background-color: white;
   // width: calc(100vw - 16px - 16px);
   width: 100vw;
-  z-index: 999;
+  z-index: 99999;
 
   .logo-wrapper {
     margin: auto 0px;
@@ -404,17 +404,36 @@ $background-color-light: rgb(218, 242, 252);
   position: relative;
   height: calc(46px + 15px);
 
-  div {
+  div:not(&.DatePicker_custom) {
     text-align: center;
-    font-size: 12px;
     
-    .DateInput-title {
-      opacity: .75;
-    }
+    
   }
 }
 
-.DateInput {
+.DateInput-wrapper {
+  .div {
+    text-align: center;
+  }
+}
+.DateInput-title {
+  opacity: .75;
+  font-size: .75rem;
+  text-align: center;
+}
+
+
+
+.DateInput_wrapper_custom {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  z-index: 9999;
+  width: 285px;
+  pointer-events: none;
+}
+
+.DateInput_custom {
   display: flex!important;
   padding: 0px 24px!important;
   cursor: pointer;
@@ -423,6 +442,7 @@ $background-color-light: rgb(218, 242, 252);
   border-color: rgba(0,0,0,0);
   border-radius: 4px;
   transition: border-color $anim-duration linear;
+  pointer-events: none;
 
   &:hover {
     border-color: rgba(0,0,0,1);
@@ -454,22 +474,25 @@ $background-color-light: rgb(218, 242, 252);
   }
 }
 
-.DatePicker {
-  position: fixed;
+.DatePicker_custom {
+  // position: block;
   z-index: 9999;
-  top: 64px;
-  left: 0px;
-  right: 0px;
+  // top: 64px;
+  // top: 0px;
+  // left: 0px;
+  // right: 0px;
   // width: fit-content;
-  margin: auto;
-  background-color: $primary-background-color;
+  // width: 130px;
+  // margin: auto;
+  // background-color: $primary-background-color;
   border-radius: 4px;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
-  padding: 24px;
-  text-align: center;
-
+  // padding: 24px;
+  width: 315px;
 }
+
+
 
 .ContactUs {
   padding: 64px 28px;
@@ -586,9 +609,33 @@ $background-color-light: rgb(218, 242, 252);
   padding: 35px 28px;
   color: white;
 
-  a {
+  a,span {
     color: white;
-    font-size: 16px;
+    font-size: 13px;
+    line-height: 1.15rem;
+  }
+
+  p {
+    margin-top: 3rem;
+  }
+}
+
+.Social {
+  position: fixed;
+  bottom: 15px;
+  right: 20px;
+  z-index: 99999;
+
+  img {
+    width: 40px;
+    background-color: white;
+    border-radius: 6px;
+    transition: all $anim-duration linear;
+    box-shadow: 1px 1px 5px 2px rgba(0,0,0,.25);
+
+    &:hover {
+      transform: scale(1.08);
+    }
   }
 }
 
