--- a/src/App.scss
+++ b/src/App.scss
@@ -93,6 +93,17 @@ $background-color-light: rgb(218, 242, 252);
   }
 }
 
+.Disclaimer {
+  // margin: auto;
+  // width: 100vw;
+  text-align: center;
+  margin-top: 6rem;
+
+  img {
+    width: 325px;
+  }
+}
+
 .Section1 {
   padding-top: $header-height;
   padding-bottom: 35px;
