--- a/src/App.scss
+++ b/src/App.scss
@@ -97,10 +97,14 @@ $background-color-light: rgb(218, 242, 252);
   // margin: auto;
   // width: 100vw;
   text-align: center;
-  margin-top: 6rem;
+  margin-top: 4rem;
 
   img {
-    width: 325px;
+    width: 300px;
+  }
+
+  h2 {
+    font-size: 1.2rem;
   }
 }
 
