updated header to have margin

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,7 @@ $background-color-light: rgb(218, 242, 252);
 
   .logo-wrapper {
     margin: auto 0px;
+    margin-right: 1rem;
     
     img {
       height: 45px;
