--- a/src/mobile.scss
+++ b/src/mobile.scss
@@ -1,3 +1,10 @@
+@media only screen and (min-width: 769px){
+    .mobile-menu {
+        display: none;
+    }
+    
+}
+
 @media only screen and (max-width: 769px){
     body {
         overflow-x: hidden;
